--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       ></a-entity>
 	  <a-entity
         position="3 0 -6"
-        web-portal="url:http://tszyrhl.github.io/ic/; text:Infinite Crossroads;"
+        web-portal="url:ic.html; text:Infinite Crossroads;"
       ></a-entity>
 	  
       <a-sky color="#aff"></a-sky>
